[package]
name = "swaplink"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "Link generator to perform atomic swaps with peers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
wasm-logger = "0.2"
log = "0.4"
yew = "0.18"
yewtil = "0.4"
yew-router = "0.15.0"
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "prepare-0.3" }
my-algo = { git = "https://github.com/i-schuetz/my-algo-rust-adapter", branch = "main" }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
data-encoding = "2.3.2"
serde_with = "1.9.4"
serde_json = "1.0.64"
rmp-serde = "0.15.5"
urlencoding = "2.0.0"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
